# wasm-closure

./: .gitignore  README.md
jni-app/: App.h  App.java  a.csv  add.wasm  foo.wasm
rust-cli/: Cargo.toml
rust/src/: main.rs
src/: g.wasm  main.rs
wasm-bootstrap-lib/: Cargo.toml
wasm-bootstrap-lib/src/: lib.rs
