[package]
name = "run"
version = "0.1.0"
authors = [""]
edition = "2018"

[dependencies]
# Add the wasmer-runtime as a dependency
wasmer-runtime = { git = "https://github.com/rj-atw/wasmer.git"}
jni = "0.16.0"
wasmer-llvm-backend = { git = "https://github.com/rj-atw/wasmer.git"}

[lib]
name = "wasm_bootstrap"
crate-type = ["cdylib"]
